--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "jaketrent",
   "license": "MIT",
   "devDependencies": {
-    "dead-server": "^1.0.6"
+    "dead-server": "^1.0.6",
+    "nodemon": "^2.0.16"
   }
 }
